# customer_visit_tracking

./: .gitignore  README.md  pyproject.toml
customer_visit_tracking/: api.py  hooks.py  modules.txt  visit_controller.py
customer_visit_tracking/config/: desktop.py  docs.py
customer_visit_tracking/customer_visit_tracking/doctype/customer_visit/: customer_visit.js  customer_visit.json  customer_visit.py  customer_visit_list.js  test_customer_visit.py
customer_visit_tracking/fixtures/: workflow.json  workflow_state.json
