[project]
name = "customer_visit_tracking"
authors = [
    { name = "Al-Aswany", email = "mahmudhussain2001ab@gmail.com"}
]
description = "ERPNext module for sales teams to track client visits with 3-stage approval workflow (Draft→Review→Approved). Features automated notifications, REST API, mobile-ready design, and role-based permissions. Ensures data completeness in customer engagements. Built on Frappe Framework."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
